--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark light" />
 
-    <title>Submersion — Professional Dive Logging Software</title>
+    <title>Submersion Dive Log</title>
     <meta
       name="description"
       content="Submersion is a comprehensive, open-source dive logging application for recreational and technical divers. Cross-platform. Privacy-focused. No subscriptions."
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Submersion" />
     <meta
       property="og:description"
-      content="Professional dive logging software with complete data ownership. Open-source, cross-platform, and built for serious divers."
+      content="Dive logging software with complete data ownership. Open-source, cross-platform, and built for serious divers."
     />
     <meta property="og:type" content="website" />
 
