--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             class="brand__mark"
             src="assets/submersion-logo.png"
             alt="Submersion"
-            width="44"
-            height="44"
+            width="72"
+            height="72"
             decoding="async"
           />
           <span class="brand__name">Submersion</span>
@@ -98,7 +98,7 @@
       <section class="section" id="why">
         <div class="container">
           <div class="section__head">
-            <h2>Designed for divers who value data sovereignty.</h2>
+            <h2>Designed for divers who want full control of their data.</h2>
             <p>
               Traditional dive logging solutions either rely on outdated desktop software or mobile applications that restrict data access behind mandatory accounts and proprietary cloud infrastructure. Submersion offers a fundamentally different approach.
             </p>
@@ -122,7 +122,7 @@
               <p>Available for iOS, Android, macOS, Windows, and Linux—consistent logbook functionality and analytics across all devices.</p>
             </article>
             <article class="card" role="listitem">
-              <h3>Permanently Free</h3>
+              <h3>Free, forever</h3>
               <p>Open-source software licensed under GPL‑3.0. No advertisements. No premium feature restrictions.</p>
             </article>
           </div>
