--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="frame">
               <img
                 class="frame__img"
-                src="screenshots/home_screen.png"
+                src="screenshots/dive_details_1.png"
                 alt=""
                 loading="eager"
                 decoding="async"
