--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p class="eyebrow">Privacy-Focused • Open-Source • Cross-Platform</p>
             <h1>Dive logging without compromise.</h1>
             <p class="lead">
-              Submersion provides divers with comprehensive logbook management — no proprietary formats, no mandatory cloud services, no subscription fees.
+              Submersion provides scuba divers with comprehensive logbook management — no proprietary formats, no mandatory cloud services, no subscription fees.
             </p>
 
             <div class="hero__cta">
