--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p class="eyebrow">Privacy-Focused • Open-Source • Cross-Platform</p>
             <h1>Dive logging without compromise.</h1>
             <p class="lead">
-              Submersion provides scuba divers with comprehensive logbook management — no proprietary formats, no mandatory cloud services, no subscription fees.
+              Submersion is a comprehensive dive log that works on all your devices. No mandatory accounts. No subscription fees. No vendor lock-in. Your data stays yours.
             </p>
 
             <div class="hero__cta">
@@ -108,7 +108,7 @@
             <article class="card" role="listitem">
               <h3>Complete Data Ownership</h3>
               <p>
-                All data resides locally on your device. Cloud synchronization remains entirely optional. Export your complete logbook to open standards at any time.
+                Your dives stay on your device. Sync to the cloud only if you want to. Export your logbook whenever you want.
               </p>
             </article>
             <article class="card" role="listitem">
