--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
           <a href="#why">Why</a>
           <a href="#features">Features</a>
           <a href="#screens">Screens</a>
-          <a href="#roadmap">Roadmap</a>
           <a href="#support">Support</a>
           <a class="btn btn--small" href="https://github.com/submersion-app/submersion" target="_blank" rel="noreferrer">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
@@ -61,11 +60,6 @@
             <p class="lead">
               Submersion is a comprehensive dive log that works on all your devices. No mandatory accounts. No subscription fees. No vendor lock-in. Your data stays yours.
             </p>
-
-            <div class="hero__cta">
-              <a class="btn" href="#screens">View Application</a>
-              <a class="btn btn--ghost" href="#why">Learn More</a>
-            </div>
 
             <ul class="hero__stats" aria-label="Highlights">
               <li>
@@ -103,7 +97,7 @@
       <section class="section" id="why">
         <div class="container">
           <div class="section__head">
-            <h2>Designed for divers who want full control of their data.</h2>
+            <h2>Full control over your dive data.</h2>
             <p>
               Traditional dive logging solutions either rely on outdated desktop software or mobile applications that restrict data access behind mandatory accounts and proprietary cloud infrastructure. Submersion offers a fundamentally different approach.
             </p>
@@ -137,7 +131,7 @@
       <section class="section section--tight" id="features">
         <div class="container">
           <div class="section__head">
-            <h2>Comprehensive capabilities for recreational and technical diving.</h2>
+            <h2>For recreational and technical divers.</h2>
             <p>Streamlined workflows for routine logging with advanced functionality available when required.</p>
           </div>
 
@@ -184,7 +178,7 @@
       <section class="section section--scrolly" id="screens">
         <div class="container">
           <div class="section__head">
-            <h2>See it in action.</h2>
+            <h2>A closer look.</h2>
             <p>
               A clean, intuitive interface designed for divers who want powerful features without complexity.
             </p>
@@ -287,69 +281,14 @@
         </div>
       </section>
 
-      <section class="section" id="roadmap">
-        <div class="container">
-          <div class="section__head">
-            <h2>Development Roadmap</h2>
-            <p>Consistent delivery with focus on stability, performance, and transparent development.</p>
-          </div>
-
-          <div class="timeline" role="list">
-            <div class="milestone" role="listitem">
-              <div class="milestone__tag">Complete</div>
-              <h3>v1.0 → v1.1</h3>
-              <p>Core logging infrastructure, site management, equipment tracking, statistics, and interface refinements including GPS integration and map visualization.</p>
-            </div>
-            <div class="milestone" role="listitem">
-              <div class="milestone__tag">In Progress</div>
-              <h3>v1.5</h3>
-              <p>Dive computer connectivity, decompression algorithms, oxygen toxicity monitoring, and enhanced profile telemetry.</p>
-            </div>
-            <div class="milestone" role="listitem">
-              <div class="milestone__tag">Planned</div>
-              <h3>v2.0</h3>
-              <p>Optional cloud synchronization, media attachments, internationalization, and community features.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <section class="section" id="support">
         <div class="container">
           <div class="section__head">
             <h2>Support</h2>
-            <p>Questions, feedback, or issues? Here's how to get in touch.</p>
-          </div>
-
-          <div class="cards" role="list">
-            <article class="card" role="listitem">
-              <h3>General Inquiries</h3>
-              <p>
-                For questions about Submersion, feature requests, or general feedback, reach out via email.
-              </p>
-              <a class="btn btn--small" href="mailto:support@submersion.app">Send Email</a>
-            </article>
-            <article class="card" role="listitem">
-              <h3>Bug Reports</h3>
-              <p>
-                Encountered an issue? Submit a detailed bug report on GitHub so our team can investigate and resolve it.
-              </p>
-              <a class="btn btn--small btn--ghost" href="https://github.com/submersion-app/submersion/issues/new?template=bug_report.md" target="_blank" rel="noreferrer">Report Issue</a>
-            </article>
-            <article class="card" role="listitem">
-              <h3>Feature Requests</h3>
-              <p>
-                Have an idea for improving Submersion? Share your suggestions on GitHub to help shape future development.
-              </p>
-              <a class="btn btn--small btn--ghost" href="https://github.com/submersion-app/submersion/issues/new?template=feature_request.md" target="_blank" rel="noreferrer">Request Feature</a>
-            </article>
-            <article class="card" role="listitem">
-              <h3>Documentation</h3>
-              <p>
-                Comprehensive guides, setup instructions, and technical documentation are available in our repository.
-              </p>
-              <a class="btn btn--small btn--ghost" href="https://github.com/submersion-app/submersion#readme" target="_blank" rel="noreferrer">View Documentation</a>
-            </article>
+            <p>
+              Found a bug or have a feature idea? <a href="https://github.com/submersion-app/submersion/issues" target="_blank" rel="noreferrer">Open an issue on GitHub</a>.<br />
+              For other inquiries, email <a href="mailto:support@submersion.app">support@submersion.app</a>.
+            </p>
           </div>
         </div>
       </section>
