--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
           <div class="section__head">
             <h2>For recreational and technical divers.</h2>
-            <p>Streamlined workflows for routine logging with advanced functionality available when required.</p>
+            <p>Simple by default. Advanced when needed.</p>
           </div>
 
           <div class="featureGrid">
@@ -180,7 +180,7 @@
           <div class="section__head">
             <h2>A closer look.</h2>
             <p>
-              A clean, intuitive interface designed for divers who want powerful features without complexity.
+              A clean interface for comprehensive dive logging.
             </p>
           </div>
 
