--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" type="image/png" href="assets/submersion-logo.png" />
+    <link rel="icon" type="image/png" href="assets/icon.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -29,7 +29,7 @@
         <a class="brand" href="#top">
           <img
             class="brand__mark"
-            src="assets/submersion-logo.png"
+            src="assets/icon.png"
             alt="Submersion"
             width="72"
             height="72"
@@ -56,7 +56,7 @@
         <div class="hero__grid">
           <div class="hero__copy">
             <p class="eyebrow">Privacy-Focused • Open-Source • Cross-Platform</p>
-            <h1>Dive logging without compromise.</h1>
+            <h1>Your dives. Your data.</h1>
             <p class="lead">
               Submersion is a comprehensive dive log that works on all your devices. No mandatory accounts. No subscription fees. No vendor lock-in. Your data stays yours.
             </p>
