--- a/index.html
+++ b/index.html
@@ -175,108 +175,55 @@
         </div>
       </section>
 
-      <section class="section section--scrolly" id="screens">
+      <section class="section" id="screens">
         <div class="container">
           <div class="section__head">
             <h2>A closer look.</h2>
-            <p>
-              A clean interface for comprehensive dive logging.
-            </p>
+            <p>A clean interface for comprehensive dive logging.</p>
           </div>
 
-          <div class="scrolly" data-scrolly>
-            <div class="scrolly__sticky" aria-hidden="true">
-              <div class="device">
-                <img
-                  class="device__img"
-                  src="screenshots/home_screen.png"
-                  alt=""
-                  loading="lazy"
-                  decoding="async"
-                  data-scrolly-image
-                />
-                <div class="device__shine"></div>
-              </div>
-            </div>
+          <div class="gallery">
+            <article class="tile">
+              <img src="screenshots/home_screen.png" alt="Dashboard Overview" loading="lazy" decoding="async" />
+              <h3>Dashboard Overview</h3>
+              <p>Recent dives, statistics, and navigation. Local data storage with complete offline functionality.</p>
+            </article>
 
-            <div class="scrolly__steps" aria-label="Screenshots walkthrough">
-              <article class="step is-active" data-step data-img="screenshots/home_screen.png">
-                <h3>Dashboard Overview</h3>
-                <p>Access recent dives, statistics, and navigation with streamlined menu architecture.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Privacy-first design with local data storage</li>
-                    <li>Complete offline functionality</li>
-                  </ul>
-                </div>
-              </article>
+            <article class="tile">
+              <img src="screenshots/dive_log.png" alt="Efficient Dive Entry" loading="lazy" decoding="async" />
+              <h3>Efficient Dive Entry</h3>
+              <p>Depth, duration, temperature, conditions, and annotations. Automated numbering and surface intervals.</p>
+            </article>
 
-              <article class="step" data-step data-img="screenshots/dive_log.png">
-                <h3>Efficient Dive Entry</h3>
-                <p>Record depth, duration, temperature, conditions, dive partners, and annotations.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Automated dive numbering with gap detection</li>
-                    <li>Automatic surface interval computation</li>
-                  </ul>
-                </div>
-              </article>
+            <article class="tile">
+              <img src="screenshots/dive_details_1.png" alt="Comprehensive Dive Records" loading="lazy" decoding="async" />
+              <h3>Comprehensive Records</h3>
+              <p>Location, environmental conditions, and multi-cylinder gas configurations in one view.</p>
+            </article>
 
-              <article class="step" data-step data-img="screenshots/dive_details_1.png">
-                <h3>Comprehensive Dive Records</h3>
-                <p>Detailed views display complete dive information including location, environmental conditions, and gas configurations.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Multi-cylinder configuration support</li>
-                    <li>Air, nitrox, and trimix gas tracking</li>
-                  </ul>
-                </div>
-              </article>
+            <article class="tile">
+              <img src="screenshots/dive_sites.png" alt="Site Database" loading="lazy" decoding="async" />
+              <h3>Site Database</h3>
+              <p>GPS coordinates, regional data, and automatic reverse geocoding for every dive site.</p>
+            </article>
 
-              <article class="step" data-step data-img="screenshots/dive_sites.png">
-                <h3>Site Database</h3>
-                <p>Maintain comprehensive site records with GPS coordinates, regional data, and detailed notes.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Device GPS location capture</li>
-                    <li>Automatic reverse geocoding</li>
-                  </ul>
-                </div>
-              </article>
+            <article class="tile">
+              <img src="screenshots/sites_map.png" alt="Interactive Map View" loading="lazy" decoding="async" />
+              <h3>Interactive Map</h3>
+              <p>All dive sites on an interactive map with intelligent marker clustering.</p>
+            </article>
 
-              <article class="step" data-step data-img="screenshots/sites_map.png">
-                <h3>Interactive Map View</h3>
-                <p>Visualize all your dive sites on an interactive map with intelligent marker clustering.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Cluster markers for dense regions</li>
-                    <li>Quick navigation to site details</li>
-                  </ul>
-                </div>
-              </article>
+            <article class="tile">
+              <img src="screenshots/equipment.png" alt="Equipment Management" loading="lazy" decoding="async" />
+              <h3>Equipment Management</h3>
+              <p>Service intervals, gear configurations, and per-dive assignments with reminders.</p>
+            </article>
 
-              <article class="step" data-step data-img="screenshots/equipment.png">
-                <h3>Equipment Management</h3>
-                <p>Monitor service intervals, equipment configurations, and per-dive gear assignments.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Service reminder notifications</li>
-                    <li>Serial number and purchase date tracking</li>
-                  </ul>
-                </div>
-              </article>
-
-              <article class="step" data-step data-img="screenshots/statistics.png">
-                <h3>Dive Statistics</h3>
-                <p>Comprehensive analytics including total dives, bottom time, depth records, and diving trends.</p>
-                <div class="step__more">
-                  <ul>
-                    <li>Lifetime and yearly statistics</li>
-                    <li>Visual charts and progress tracking</li>
-                  </ul>
-                </div>
-              </article>
-            </div>
+            <article class="tile">
+              <img src="screenshots/statistics.png" alt="Dive Statistics" loading="lazy" decoding="async" />
+              <h3>Dive Statistics</h3>
+              <p>Total dives, bottom time, depth records, and lifetime trends at a glance.</p>
+            </article>
           </div>
         </div>
       </section>
