feat: add download section HTML with static fallback

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <a href="#features">Features</a>
           <a href="#screens">Screens</a>
           <a href="#support">Support</a>
+          <a href="#download">Download</a>
           <a class="btn btn--small" href="https://github.com/submersion-app/submersion" target="_blank" rel="noreferrer">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
@@ -240,35 +241,51 @@
         </div>
       </section>
 
-      <section class="section section--cta" id="get">
+      <section class="section section--cta" id="download">
         <div class="container">
-          <div class="cta">
-            <div class="cta__copy">
-              <h2>Get Started</h2>
+          <div class="download">
+            <div class="section__head">
+              <h2>Download Submersion</h2>
               <p>
-                Submersion is open-source and privacy-focused. Evaluate the software, export your data at any time, and contribute to ongoing development.
+                Open-source and privacy-focused. Your data stays on your device. No accounts required.
               </p>
             </div>
-            <div class="cta__actions">
-              <a class="btn" href="https://github.com/submersion-app/submersion" target="_blank" rel="noreferrer">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+
+            <a
+              id="download-primary"
+              class="download__primary btn"
+              href="https://github.com/submersion-app/submersion/releases"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span id="download-primary-icon"></span>
+              <span>
+                <span id="download-primary-label">Download</span>
+                <small id="download-primary-meta" class="download__version"></small>
+              </span>
+            </a>
+
+            <div class="download__secondary" id="download-secondary">
+              <p class="download__secondary-label">All platforms:</p>
+              <div class="download__platforms" id="download-platforms"></div>
+            </div>
+
+            <div class="download__fallback">
+              <a href="https://github.com/submersion-app/submersion" target="_blank" rel="noreferrer">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
                 </svg>
                 View on GitHub
               </a>
-              <a
-                class="btn btn--ghost"
-                href="https://github.com/submersion-app/submersion#quick-start"
-                target="_blank"
-                rel="noreferrer"
-                >Build Instructions</a
-              >
+              <a href="https://github.com/submersion-app/submersion#quick-start" target="_blank" rel="noreferrer">
+                Build Instructions
+              </a>
             </div>
           </div>
 
           <footer class="footer">
             <p>
-              © <span data-year></span> Submersion. Open-source software licensed under GPL‑3.0.
+              &copy; <span data-year></span> Submersion. Open-source software licensed under GPL&#8209;3.0.
             </p>
           </footer>
         </div>
