--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" type="image/png" href="assets/icon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
