--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Submersion Dive Log</title>
     <meta
       name="description"
-      content="Submersion is a comprehensive, open-source dive logging application for recreational and technical divers. Cross-platform. Privacy-focused. No subscriptions."
+      content="Submersion is a comprehensive, open-source dive logging application for recreational and technical divers. Cross-platform. No subscriptions. No vendor lock-in."
     />
 
     <meta property="og:title" content="Submersion" />
@@ -56,7 +56,7 @@
       <section class="hero" id="top">
         <div class="hero__grid">
           <div class="hero__copy">
-            <p class="eyebrow">Privacy-Focused • Open-Source • Cross-Platform</p>
+            <p class="eyebrow">Open-Source • Cross-Platform • Free Forever</p>
             <h1>Your dives. Your data.</h1>
             <p class="lead">
               Submersion is a comprehensive dive log that works on all your devices. No mandatory accounts. No subscription fees. No vendor lock-in. Your data stays yours.
@@ -100,7 +100,7 @@
           <div class="section__head">
             <h2>Full control over your dive data.</h2>
             <p>
-              Traditional dive logging solutions either rely on outdated desktop software or mobile applications that restrict data access behind mandatory accounts and proprietary cloud infrastructure. Submersion offers a fundamentally different approach.
+              Traditional dive logging solutions either rely on outdated desktop software or mobile applications that restrict data access behind mandatory accounts and proprietary cloud infrastructure. Submersion offers a different approach.
             </p>
           </div>
 
@@ -247,7 +247,7 @@
             <div class="section__head">
               <h2>Download Submersion</h2>
               <p>
-                Open-source and privacy-focused. Your data stays on your device. No accounts required.
+                Comprehensive and open-source. Your data stays on your device. No accounts required.
               </p>
             </div>
 
