--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="hero__grid">
           <div class="hero__copy">
             <p class="eyebrow">Open-Source • Cross-Platform • Free Forever</p>
-            <h1>Your dives. Your data.</h1>
+            <h1>Dive deeper.</h1>
             <p class="lead">
               Submersion is a comprehensive dive log that works on all your devices. No mandatory accounts. No subscription fees. No vendor lock-in. Your data stays yours.
             </p>
@@ -247,7 +247,7 @@
             <div class="section__head">
               <h2>Download Submersion</h2>
               <p>
-                Comprehensive and open-source. Your data stays on your device. No accounts required.
+                Comprehensive and open-source. You own your data. No accounts required.
               </p>
             </div>
 
