--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
             <article class="card" role="listitem">
               <h3>Vendor Independence</h3>
               <p>
-                Full UDDF 3.2 import and export capability, plus CSV support. Your dive history remains portable—both now and for years to come.
+                Full UDDF 3.2 import and export capability, plus CSV support. Your dive history remains portable, both now and for years to come.
               </p>
             </article>
             <article class="card" role="listitem">
               <h3>Unified Cross-Platform Experience</h3>
-              <p>Available for iOS, Android, macOS, Windows, and Linux—consistent logbook functionality and analytics across all devices.</p>
+              <p>Available for iOS, Android, macOS, Windows, and Linux. Consistent logbook functionality and analytics across all devices.</p>
             </article>
             <article class="card" role="listitem">
               <h3>Free, forever</h3>
